--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -208,26 +208,83 @@ collections:
             modes: *a12
             required: true
           - widget: markdown
-            name: dna
-            label: Nosso DNA
+            name: mission
+            label: Missão
             editor_components: &a13 []
             modes: &a14
               - rich_text
             required: true
           - widget: markdown
-            name: dna_en
-            label: Nosso DNA (Inglês)
+            name: mission_en
+            label: Missão (Inglês)
             editor_components: *a13
             modes: *a14
             required: true
           - widget: markdown
-            name: dna_es
-            label: Nosso DNA (Espanhol)
+            name: mission_es
+            label: Missão (Espanhol)
             editor_components: *a13
             modes: *a14
             required: true
-          - widget: list
+          - widget: markdown
+            name: vision
+            label: Visão
+            editor_components: &a15 []
+            modes: &a16
+              - rich_text
+            required: true
+          - widget: markdown
+            name: vision_en
+            label: Visão (Inglês)
+            editor_components: *a15
+            modes: *a16
+            required: true
+          - widget: markdown
+            name: vision_es
+            label: Visão (Espanhol)
+            editor_components: *a15
+            modes: *a16
+            required: true
+          - widget: markdown
             name: values
+            label: Valores
+            editor_components: &a17 []
+            modes: &a18
+              - rich_text
+            required: true
+          - widget: markdown
+            name: values_en
+            label: Valores (Inglês)
+            editor_components: *a17
+            modes: *a18
+            required: true
+          - widget: markdown
+            name: values_es
+            label: Valores (Espanhol)
+            editor_components: *a17
+            modes: *a18
+            required: true
+          - widget: markdown
+            name: dna
+            label: Nosso DNA
+            editor_components: &a19 []
+            modes: &a20
+              - rich_text
+            required: true
+          - widget: markdown
+            name: dna_en
+            label: Nosso DNA (Inglês)
+            editor_components: *a19
+            modes: *a20
+            required: true
+          - widget: markdown
+            name: dna_es
+            label: Nosso DNA (Espanhol)
+            editor_components: *a19
+            modes: *a20
+            required: true
+          - widget: list
+            name: dnas
             label: DNAs
             allow_add: true
             max: 5
