--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -69,6 +69,10 @@ collections:
         label: Posição
         min: 1
         default: 100
+      - widget: string
+        name: youtube
+        label: Link do Youtube (pode ser apenas o ID)
+        required: false
       - widget: image
         name: images
         allow_multiple: true
