--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "astro dev --host",
     "build": "astro check && astro build",
     "preview": "astro preview --host",
-    "astro": "astro"
+    "astro": "astro",
+    "server": "npx decap-server"
   },
   "dependencies": {
     "@astrojs/check": "^0.4.1",
@@ -19,7 +20,7 @@
     "@caiquecamargo/vite-plugin-netlify-cms": "^0.0.15",
     "@headlessui/vue": "^1.7.17",
     "@nanostores/vue": "^0.10.0",
-    "@vueuse/core": "^10.7.1",
+    "@vueuse/core": "^10.7.2",
     "astro": "^4.1.2",
     "marked": "^11.1.1",
     "nanostores": "^0.9.5",
@@ -29,7 +30,7 @@
     "ts-pattern": "^5.0.6",
     "typescript": "^5.3.3",
     "unplugin-icons": "^0.18.2",
-    "vue": "^3.4.11"
+    "vue": "^3.4.14"
   },
   "devDependencies": {
     "@iconify-json/akar-icons": "^1.1.23",
