Change image behavior on products

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -98,6 +98,8 @@ collections:
         allow_multiple: true
         label: Imagens
         required: true
+        media_folder: /src/assets/images
+        public_folder: ../../assets/images
         media_library:
           config:
             multiple: true
@@ -141,6 +143,8 @@ collections:
             label: Imagems
             required: true
             allow_multiple: true
+            media_folder: /src/assets/images
+            public_folder: ../../assets/images
             media_library:
               config:
                 multiple: true
