--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@iconify-json/fa6-brands": "^1.1.18",
     "@iconify-json/heroicons": "^1.1.19",
     "@iconify-json/ic": "^1.1.17",
+    "@iconify-json/logos": "^1.1.35",
     "@iconify-json/material-symbols": "^1.1.70",
     "@iconify-json/mdi": "^1.1.64",
     "@iconify-json/ph": "^1.1.10",
