--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -182,7 +182,7 @@ collections:
             required: true
           - widget: image
             name: titleBackground
-            label: Imagem de fundo do título
+            label: Banner da página inicial
             required: true
             allow_multiple: false
           - widget: markdown
